[package]
name = "not_again"
version = "0.1.0"
authors = ["Shane Celis <shane.celis@gmail.com>"]
license = "Apache-2.0/MIT"
description = "This crate provides dbg_if_ne! variants that only print on changes."
keywords = ["once", "debug", "dbg"]

repository = "https://github.com/shanecelis/not_again"
edition = "2021"

[features]
float = [ "dep:approx", "dep:atomic_float" ]

[dev-dependencies]
gag = "1.0.0"
regex = "1.10.4"

[dependencies]
approx = { version = "0.5.1", optional = true }
atomic_float = { version = "0.1.0", optional = true }
