[package]
name = "dbg_if"
version = "0.1.0"
authors = ["Shane Celis <shane.celis@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Use dbg! in the loop without terminal woes."
keywords = ["once", "debug", "dbg"]

repository = "https://github.com/shanecelis/dbg_if"
edition = "2021"

[features]
float = [ "dep:approx", "dep:atomic_float" ]

[dev-dependencies]
gag = "1.0.0"
regex = "1.10.4"
version-sync = "0.9"

[dependencies]
approx = { version = "0.5.1", optional = true }
atomic_float = { version = "0.1.0", optional = true }
